--- a/site02/css/styles.css
+++ b/site02/css/styles.css
@@ -14,13 +14,13 @@
         /* body*/
         
         div.container-element a:link {
-            color: #b296bd;
+            color: #451a50;
             text-decoration: none;
             background-color: transparent
         }
         
         div.container-element a:hover {
-            color: #451a50;
+            color: #b296bd;
             text-decoration: none;
             background-color: transparent
         }
@@ -133,6 +133,287 @@
             background-color: transparent;
         }
         
+        .silex-id-1518179420804-0 {
+            width: 495px;
+            min-height: 46px;
+            top: 75px;
+            left: 10px;
+        }
+        
+        .silex-id-1518179636440-1 {
+            width: 628px;
+            background-color: transparent;
+            min-height: 35px;
+            top: 124px;
+            left: 570px;
+        }
+        
+        .silex-id-1518179636441-2 {
+            width: 30px;
+            min-height: 30px;
+            top: 2px;
+            left: 588px;
+        }
+        
+        .silex-id-1518179636442-3 {
+            width: 30px;
+            min-height: 30px;
+            top: 2px;
+            left: 543px;
+        }
+        
+        .silex-id-1518179636443-4 {
+            width: 120px;
+            min-height: 20px;
+            top: 7px;
+            left: 303px;
+        }
+        
+        .silex-id-1518179636443-5 {
+            width: 105px;
+            min-height: 20px;
+            top: 7px;
+            left: 428px;
+        }
+        
+        .silex-id-1518179636443-6 {
+            width: 80px;
+            min-height: 20px;
+            top: 7px;
+            left: 20px;
+            border-radius: 0px 0px 0px 0px;
+        }
+        
+        .silex-id-1518179636444-7 {
+            width: 190px;
+            min-height: 20px;
+            top: 7px;
+            left: 106px;
+            background-color: transparent;
+        }
+        
+        .silex-id-1518188806706-24 {
+            width: 107px;
+            background-color: transparent;
+            min-height: 57px;
+            top: 10px;
+            left: 1415px;
+        }
+        
+        .silex-id-1518188624516-22 {
+            width: 105px;
+            min-height: 22px;
+            top: 5px;
+            left: 0px;
+        }
+        
+        .silex-id-1518188659662-23 {
+            width: 105px;
+            min-height: 23px;
+            top: 30px;
+            left: 0px;
+        }
+        
+        .silex-id-1518188937243-25 {
+            width: 107px;
+            background-color: transparent;
+            min-height: 57px;
+            top: 10px;
+            left: 1415px;
+        }
+        
+        .silex-id-1518188937244-26 {
+            width: 105px;
+            min-height: 22px;
+            top: 5px;
+            left: 0px;
+        }
+        
+        .silex-id-1518188937245-27 {
+            width: 105px;
+            min-height: 23px;
+            top: 30px;
+            left: 0px;
+        }
+        
+        .silex-id-1518188979070-32 {
+            width: 105px;
+            min-height: 22px;
+            top: 5px;
+            left: 0px;
+        }
+        
+        .silex-id-1518188969117-31 {
+            width: 105px;
+            min-height: 23px;
+            top: 30px;
+            left: 0px;
+        }
+        
+        .silex-id-1518189062118-33 {
+            width: 107px;
+            background-color: transparent;
+            min-height: 57px;
+            top: 10px;
+            left: 1415px;
+        }
+        
+        .silex-id-1518189062118-34 {
+            width: 105px;
+            min-height: 22px;
+            top: 5px;
+            left: 0px;
+        }
+        
+        .silex-id-1518189062120-35 {
+            width: 105px;
+            min-height: 23px;
+            top: 30px;
+            left: 0px;
+        }
+        
+        .silex-id-1518189062121-36 {
+            width: 105px;
+            min-height: 22px;
+            top: 5px;
+            left: 0px;
+        }
+        
+        .silex-id-1518189062121-37 {
+            width: 105px;
+            min-height: 23px;
+            top: 30px;
+            left: 0px;
+        }
+        
+        .silex-id-1518189073412-38 {
+            width: 105px;
+            min-height: 22px;
+            top: 5px;
+            left: 0px;
+        }
+        
+        .silex-id-1518189082856-39 {
+            width: 105px;
+            min-height: 23px;
+            top: 30px;
+            left: 0px;
+        }
+        
+        .silex-id-1518189163858-44 {
+            width: 107px;
+            background-color: transparent;
+            min-height: 57px;
+            top: 10px;
+            left: 1415px;
+        }
+        
+        .silex-id-1518189163858-45 {
+            width: 105px;
+            min-height: 22px;
+            top: 5px;
+            left: 0px;
+        }
+        
+        .silex-id-1518189163860-46 {
+            width: 105px;
+            min-height: 23px;
+            top: 30px;
+            left: 0px;
+        }
+        
+        .silex-id-1518189163860-47 {
+            width: 105px;
+            min-height: 22px;
+            top: 5px;
+            left: 0px;
+        }
+        
+        .silex-id-1518189163861-48 {
+            width: 105px;
+            min-height: 23px;
+            top: 30px;
+            left: 0px;
+        }
+        
+        .silex-id-1518189163861-49 {
+            width: 105px;
+            min-height: 22px;
+            top: 5px;
+            left: 0px;
+        }
+        
+        .silex-id-1518189163862-50 {
+            width: 105px;
+            min-height: 23px;
+            top: 30px;
+            left: 0px;
+        }
+        
+        .silex-id-1518189143498-40 {
+            width: 105px;
+            min-height: 22px;
+            top: 5px;
+            left: 0px;
+        }
+        
+        .silex-id-1518189171338-51 {
+            width: 107px;
+            background-color: transparent;
+            min-height: 57px;
+            top: 10px;
+            left: 1415px;
+        }
+        
+        .silex-id-1518189171338-52 {
+            width: 105px;
+            min-height: 22px;
+            top: 5px;
+            left: 0px;
+        }
+        
+        .silex-id-1518189171339-53 {
+            width: 105px;
+            min-height: 23px;
+            top: 30px;
+            left: 0px;
+        }
+        
+        .silex-id-1518189171339-54 {
+            width: 105px;
+            min-height: 22px;
+            top: 5px;
+            left: 0px;
+        }
+        
+        .silex-id-1518189171340-55 {
+            width: 105px;
+            min-height: 23px;
+            top: 30px;
+            left: 0px;
+        }
+        
+        .silex-id-1518189171341-56 {
+            width: 105px;
+            min-height: 22px;
+            top: 5px;
+            left: 0px;
+        }
+        
+        .silex-id-1518189171341-57 {
+            width: 105px;
+            min-height: 23px;
+            top: 30px;
+            left: 0px;
+        }
+        
+        .silex-id-1518189151260-42 {
+            width: 105px;
+            min-height: 20px;
+            top: 5px;
+            left: 0px;
+        }
+        
         .silex-id-1478366450713-3 {
             top: 200px;
             left: 5px;
@@ -206,6 +487,35 @@
             left: 60px;
         }
         
+        .silex-id-1517409934831-2 {
+            width: 949px;
+            min-height: 70px;
+            top: 20px;
+            left: 20px;
+        }
+        
+        .silex-id-1517410039883-3 {
+            width: 750px;
+            background-color: rgb(255, 255, 255);
+            min-height: 603px;
+            top: 100px;
+            left: 5px;
+        }
+        
+        .silex-id-1517410206528-4 {
+            width: 1080px;
+            min-height: 99px;
+            top: 730px;
+            left: 60px;
+        }
+        
+        .silex-id-1517410535558-5 {
+            width: 1080px;
+            min-height: 432px;
+            top: 860px;
+            left: 60px;
+        }
+        
         .silex-id-1514460718967-2 {
             min-width: 1200px;
             top: 200px;
@@ -254,6 +564,20 @@
             left: 40px;
         }
         
+        .silex-id-1517409754083-1 {
+            width: 651px;
+            min-height: 70px;
+            top: 20px;
+            left: 20px;
+        }
+        
+        .silex-id-1518180230311-8 {
+            width: 300px;
+            min-height: 168px;
+            top: 100px;
+            left: 40px;
+        }
+        
         .silex-id-1514918474297-8 {
             min-width: 1200px;
             top: 1086px;
@@ -274,23 +598,9 @@
             left: 20px;
         }
         
-        .silex-id-1515078124679-8 {
-            width: 500px;
-            min-height: 210px;
-            top: 100px;
-            left: 620px;
-        }
-        
-        .silex-id-1515078237663-9 {
-            width: 500px;
-            min-height: 332px;
-            top: 370px;
-            left: 620px;
-        }
-        
         .silex-id-1515103520913-12 {
             width: 500px;
-            min-height: 115px;
+            min-height: 89px;
             top: 100px;
             left: 60px;
         }
@@ -298,15 +608,85 @@
         .silex-id-1515078124671-7 {
             width: 500px;
             min-height: 473px;
-            top: 280px;
+            top: 250px;
             left: 60px;
         }
         
         .silex-id-1515104969599-13 {
             width: 500px;
             min-height: 273px;
-            top: 860px;
+            top: 835px;
             left: 60px;
+        }
+        
+        .silex-id-1515078124679-8 {
+            width: 500px;
+            min-height: 210px;
+            top: 300px;
+            left: 620px;
+        }
+        
+        .silex-id-1515078237663-9 {
+            width: 500px;
+            min-height: 332px;
+            top: 600px;
+            left: 620px;
+        }
+        
+        .silex-id-1518186205808-9 {
+            width: 500px;
+            min-height: 115px;
+            top: 100px;
+            left: 620px;
+        }
+        
+        .silex-id-1518187045301-10 {
+            width: 875px;
+            min-height: 70px;
+            top: 20px;
+            left: 20px;
+        }
+        
+        .silex-id-1518187045358-16 {
+            width: 500px;
+            min-height: 115px;
+            top: 100px;
+            left: 620px;
+        }
+        
+        .silex-id-1518187045327-11 {
+            width: 500px;
+            min-height: 89px;
+            top: 100px;
+            left: 60px;
+        }
+        
+        .silex-id-1518187045332-12 {
+            width: 500px;
+            min-height: 473px;
+            top: 250px;
+            left: 60px;
+        }
+        
+        .silex-id-1518187045338-13 {
+            width: 500px;
+            min-height: 273px;
+            top: 835px;
+            left: 60px;
+        }
+        
+        .silex-id-1518187045351-15 {
+            width: 500px;
+            min-height: 332px;
+            top: 600px;
+            left: 620px;
+        }
+        
+        .silex-id-1518187045344-14 {
+            width: 500px;
+            min-height: 210px;
+            top: 300px;
+            left: 620px;
         }
         
         .silex-id-1515078047203-5 {
@@ -322,18 +702,32 @@
             left: 204px;
         }
         
-        .silex-id-1515761692397-10 {
+        .silex-id-1515761692415-11 {
+            width: 1120px;
+            min-height: 374px;
+            top: 100px;
+            left: 40px;
+        }
+        
+        .silex-id-1517393379094-4 {
+            width: 1120px;
+            min-height: 374px;
+            top: 100px;
+            left: 40px;
+        }
+        
+        .silex-id-1517393494822-5 {
             width: 738px;
             min-height: 69px;
             top: 20px;
             left: 20px;
         }
         
-        .silex-id-1515761692415-11 {
-            width: 1120px;
-            min-height: 374px;
-            top: 100px;
-            left: 40px;
+        .silex-id-1517393545812-6 {
+            width: 738px;
+            min-height: 69px;
+            top: 20px;
+            left: 20px;
         }
         
         .silex-id-1515761331185-5 {
@@ -359,12 +753,26 @@
         
         .silex-id-1515761811618-14 {
             width: 825px;
-            min-height: 51px;
+            min-height: 61px;
             top: 730px;
             left: 80px;
         }
         
         .silex-id-1515761811585-12 {
+            width: 738px;
+            min-height: 69px;
+            top: 20px;
+            left: 20px;
+        }
+        
+        .silex-id-1517407809488-8 {
+            width: 825px;
+            min-height: 51px;
+            top: 730px;
+            left: 80px;
+        }
+        
+        .silex-id-1517408129245-0 {
             width: 738px;
             min-height: 69px;
             top: 20px;
@@ -396,6 +804,13 @@
         }
         
         .silex-id-1442914737143-3 {
+            min-height: 25px;
+            width: 697px;
+            top: 15px;
+            left: 0px;
+        }
+        
+        .silex-id-1517393641184-7 {
             min-height: 25px;
             width: 697px;
             top: 15px;
